Fix abbr, add abbr styles

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <header class="site__header">
       <a class="site__title" href="index.html">Rafael Masoni</a>
-      <p class="site__tagline">Designer, developer, illustrator, aspiring singer, D&D aficionado.</p>
+      <p class="site__tagline">Designer, developer, illustrator, aspiring singer, <abbr title="Dungeons & Dragons">D&D</abbr> aficionado.</p>
       <nav class="site__menu">
         <a class="site__menu-item site__menu-item--active" aria-current="page" href="index.html">
           <svg class="site__menu-icon" viewBox="0 0 16 16">
