Add lazy loading to images

--- a/stack.html
+++ b/stack.html
@@ -41,211 +41,211 @@
           <ul class="app__list">
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://raycast.com">
-                <img class="app__icon" src="img/stack/raycast.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/raycast.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Raycast</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://obsidian.md">
-                <img class="app__icon" src="img/stack/obsidian.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/obsidian.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Obsidian</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://todoist.com">
-                <img class="app__icon" src="img/stack/todoist.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/todoist.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Todoist</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://eagle.cool">
-                <img class="app__icon" src="img/stack/eagle.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/eagle.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Eagle</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://www.apple.com/final-cut-pro/">
-                <img class="app__icon" src="img/stack/final-cut-pro.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/final-cut-pro.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Final Cut Pro</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://affinity.serif.com/en-us/designer/">
-                <img class="app__icon" src="img/stack/affinity-designer.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/affinity-designer.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Affinity Designer</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://www.pixelmator.com/pro/">
-                <img class="app__icon" src="img/stack/pixelmator-pro.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/pixelmator-pro.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Pixelmator Pro</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://typefaceapp.com">
-                <img class="app__icon" src="img/stack/typeface.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/typeface.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Typeface</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://rogueamoeba.com/audiohijack/">
-                <img class="app__icon" src="img/stack/audio-hijack.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/audio-hijack.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Audio Hijack</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://rogueamoeba.com/fission/">
-                <img class="app__icon" src="img/stack/fission.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/fission.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Fission</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://theunarchiver.com">
-                <img class="app__icon" src="img/stack/unarchiver.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/unarchiver.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">The Unarchiver</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://1password.com">
-                <img class="app__icon" src="img/stack/1password.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/1password.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">1Password</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://cleanshot.com">
-                <img class="app__icon" src="img/stack/cleanshot-x.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/cleanshot-x.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">CleanShot X</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://handbrake.fr">
-                <img class="app__icon" src="img/stack/handbrake.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/handbrake.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">HandBrake</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://lowtechguys.com/clop/">
-                <img class="app__icon" src="img/stack/clop.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/clop.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Clop</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://software.charliemonroe.net/downie/">
-                <img class="app__icon" src="img/stack/downie.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/downie.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Downie</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://dropoverapp.com">
-                <img class="app__icon" src="img/stack/dropover.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/dropover.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Dropover</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://apps.apple.com/sg/app/iconic/id1582751983?mt=12">
-                <img class="app__icon" src="img/stack/iconic.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/iconic.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Iconic</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://folivora.ai/keyboardcleantool/">
-                <img class="app__icon" src="img/stack/keyboardcleantool.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/keyboardcleantool.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">KeyboardCleanTool</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://mega.io/storage">
-                <img class="app__icon" src="img/stack/mega.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/mega.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">MEGA</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://getnoir.app/faq">
-                <img class="app__icon" src="img/stack/noir.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/noir.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Noir</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://rogueamoeba.com/soundsource/">
-                <img class="app__icon" src="img/stack/soundsource.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/soundsource.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">SoundSource</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://icemenubar.app">
-                <img class="app__icon" src="img/stack/ice.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/ice.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Ice</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://tryalcove.com">
-                <img class="app__icon" src="img/stack/alcove.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/alcove.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Alcove</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://www.keyboardmaestro.com/">
-                <img class="app__icon" src="img/stack/keyboard-maestro.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/keyboard-maestro.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Keyboard Maestro</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://macromates.com">
-                <img class="app__icon" src="img/stack/textmate.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/textmate.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">TextMate</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://daisydiskapp.com">
-                <img class="app__icon" src="img/stack/daisydisk.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/daisydisk.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">DaisyDisk</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://nordvpn.com">
-                <img class="app__icon" src="img/stack/nordvpn.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/nordvpn.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">NordVPN</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://kaylees.site/wipr2.html">
-                <img class="app__icon" src="img/stack/wipr.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/wipr.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Wipr</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://oblador.github.io/hush/">
-                <img class="app__icon" src="img/stack/hush.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/hush.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Hush</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://getmona.app">
-                <img class="app__icon" src="img/stack/mona.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/mona.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Mona</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://netnewswire.com">
-                <img class="app__icon" src="img/stack/netnewswire.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/netnewswire.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">NetNewsWire</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://anybox.app">
-                <img class="app__icon" src="img/stack/anybox.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/anybox.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Anybox</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://brave.com">
-                <img class="app__icon" src="img/stack/brave.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/brave.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Brave</span>
               </a>
             </li>
             <li class="app__item">
               <a class="app__link" target="_blank" href="https://tryklack.com">
-                <img class="app__icon" src="img/stack/klack.webp" alt="" width="100px">
+                <img class="app__icon" src="img/stack/klack.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Klack</span>
               </a>
             </li>
