--- a/work.html
+++ b/work.html
@@ -39,10 +39,10 @@
 
           <figure class="image--featured">
             <div class="image__grid image__grid--checkered">
-              <img style="--grid-order: 1;" src="img/work/clicksign-01.webp" alt="Small-sized white user interface icons over a dark blue background.">
-              <img style="--grid-order: 2;" src="img/work/clicksign-02.webp" alt="Two blue three-dimensional human silhouettes over a white background.">
-              <img style="--grid-order: 3;" src="img/work/clicksign-03.webp" alt="Medium-sized white and light blue icons over a dark blue background.">
-              <img style="--grid-order: 4;" src="img/work/clicksign-04.webp" alt="Small-sized full-color user interface icons over a white background.">
+              <img style="--grid-order: 1;" src="img/work/clicksign-01.webp" alt="Small-sized white user interface icons over a dark blue background." loading="lazy">
+              <img style="--grid-order: 2;" src="img/work/clicksign-02.webp" alt="Two blue three-dimensional human silhouettes over a white background." loading="lazy">
+              <img style="--grid-order: 3;" src="img/work/clicksign-03.webp" alt="Medium-sized white and light blue icons over a dark blue background." loading="lazy">
+              <img style="--grid-order: 4;" src="img/work/clicksign-04.webp" alt="Small-sized full-color user interface icons over a white background." loading="lazy">
             </div>
             <figcaption>Icons and illustrations I made for Clicksign.</figcaption>
           </figure>
@@ -98,7 +98,7 @@
 
           <figure class="image--featured">
             <div class="image__grid">
-              <img src="img/work/perfarm-icons.webp" alt="A grid of dozens of line icons depicting agricultural activities.">
+              <img src="img/work/perfarm-icons.webp" alt="A grid of dozens of line icons depicting agricultural activities." loading="lazy">
             </div>
             <figcaption>My last big project at Perfarm was drawing hundreds of icons for a plethora of agricultural activities.</figcaption>
           </figure>
@@ -129,14 +129,14 @@
 
           <figure class="image--featured">
             <div class="image__grid image__grid--small">
-              <img src="img/work/logo-bloodhound.webp" alt="A geometric illustration that resembles a bloodhound.">
-              <img src="img/work/logo-rmasoni.webp" alt="An abstract geometric dark logo over a yellow background.">
-              <img src="img/work/logo-discovry.webp" alt="A circle split into three sinuous shapes of different colors resembling a map seen through a telescope.">
-              <img src="img/work/logo-alphacolor.webp" alt="A stylized capital letter ‘A’ with CMYK colors.">
-              <img src="img/work/logo-odontoclip.webp" alt="A stylized blue tooth that loks like folded paper.">
-              <img src="img/work/logo-plaev.webp" alt="A jumping yellow man made of very few pixels.">
-              <img src="img/work/logo-rubytalk.webp" alt="A speech balloon with a diamond shape over a circular train track.">
-              <img src="img/work/logo-vuash.webp" alt="A stylized blue paper airplane.">
+              <img src="img/work/logo-bloodhound.webp" alt="A geometric illustration that resembles a bloodhound." loading="lazy">
+              <img src="img/work/logo-rmasoni.webp" alt="An abstract geometric dark logo over a yellow background." loading="lazy">
+              <img src="img/work/logo-discovry.webp" alt="A circle split into three sinuous shapes of different colors resembling a map seen through a telescope." loading="lazy">
+              <img src="img/work/logo-alphacolor.webp" alt="A stylized capital letter ‘A’ with CMYK colors." loading="lazy">
+              <img src="img/work/logo-odontoclip.webp" alt="A stylized blue tooth that loks like folded paper." loading="lazy">
+              <img src="img/work/logo-plaev.webp" alt="A jumping yellow man made of very few pixels." loading="lazy">
+              <img src="img/work/logo-rubytalk.webp" alt="A speech balloon with a diamond shape over a circular train track." loading="lazy">
+              <img src="img/work/logo-vuash.webp" alt="A stylized blue paper airplane." loading="lazy">
             </div>
             <figcaption>Assorted logos I made for several projects.</figcaption>
           </figure>
@@ -202,8 +202,8 @@
 
           <figure class="image--featured">
             <div class="image__grid">
-              <img src="img/work/skeleton-01.webp" alt="A zoomed-in screenshot of the game focusing on the protagonist, which is an animated skeleton warrior.">
-              <img src="img/work/skeleton-02.webp" alt="A screenshot of the game depicting the protagonist traversing a castle full of lava traps.">
+              <img src="img/work/skeleton-01.webp" alt="A zoomed-in screenshot of the game focusing on the protagonist, which is an animated skeleton warrior." loading="lazy">
+              <img src="img/work/skeleton-02.webp" alt="A screenshot of the game depicting the protagonist traversing a castle full of lava traps." loading="lazy">
             </div>
             <figcaption>Skeleton Jigsaw — This game was a passion project that we completed in small sprints over the course of a year.</figcaption>
           </figure>
