Update Stack and its icons

--- a/stack.html
+++ b/stack.html
@@ -166,21 +166,9 @@
               </a>
             </li>
             <li class="app__item">
-              <a class="app__link" target="_blank" href="https://rogueamoeba.com/soundsource/">
-                <img class="app__icon" src="img/stack/soundsource.webp" alt="" loading="lazy" width="100px">
-                <span class="app__name">SoundSource</span>
-              </a>
-            </li>
-            <li class="app__item">
               <a class="app__link" target="_blank" href="https://icemenubar.app">
                 <img class="app__icon" src="img/stack/ice.webp" alt="" loading="lazy" width="100px">
                 <span class="app__name">Ice</span>
-              </a>
-            </li>
-            <li class="app__item">
-              <a class="app__link" target="_blank" href="https://tryalcove.com">
-                <img class="app__icon" src="img/stack/alcove.webp" alt="" loading="lazy" width="100px">
-                <span class="app__name">Alcove</span>
               </a>
             </li>
             <li class="app__item">
@@ -252,7 +240,7 @@
           </ul>
           <h2>Honorable mentions</h2>
           <p>Here are some apps I used in the past. They’re all excellent, but have been replaced by other apps in my current stack.</p>
-          <p><a target="_blank" href="https://www.alfredapp.com">Alfred</a>, <a target="_blank" href="https://matthewpalmer.net/horo-free-timer-mac/">Horo</a>, <a target="_blank" href="https://gifox.app">Gifox</a>, <a target="_blank" href="https://apps.apple.com/in/app/amphetamine/id937984704?mt=12">Amphetamine</a>, <a target="_blank" href="https://c-command.com/toothfairy/">ToothFairy</a>, <a target="_blank" href="https://www.textsniper.app">TextSniper</a>, <a target="_blank" href="https://numi.app">Numi</a>, <a href="https://soulver.app">Soulver</a>, <a target="_blank" href="https://trankynam.com/atext/">aText</a>, <a target="_blank" href="https://magnet.crowdcafe.com">Magnet</a>, <a target="_blank" href="https://maccy.app">Maccy</a>, <a target="_blank" href="https://nova.app">Nova</a>, <a target="_blank" href="https://duckduckgo.com/?q=camo+app&t=osx&ia=web">Camo</a>, <a target="_blank" href="https://colorslurp.com">ColorSlurp</a>, <a target="_blank" href="https://sipapp.io">Sip</a>, <a target="_blank" href="https://www.craft.do">Craft</a>, <a target="_blank" href="https://ulysses.app">Ulysses</a>, <a target="_blank" href="https://raindrop.io">Raindrop</a>, <a target="_blank" href="https://www.reederapp.com">Reeder</a>, <a target="_blank" href="https://tot.rocks">Tot</a>.</p>
+          <p><a target="_blank" href="https://www.alfredapp.com">Alfred</a>, <a target="_blank" href="https://matthewpalmer.net/horo-free-timer-mac/">Horo</a>, <a target="_blank" href="https://gifox.app">Gifox</a>, <a target="_blank" href="https://apps.apple.com/in/app/amphetamine/id937984704?mt=12">Amphetamine</a>, <a target="_blank" href="https://c-command.com/toothfairy/">ToothFairy</a>, <a target="_blank" href="https://www.textsniper.app">TextSniper</a>, <a target="_blank" href="https://numi.app">Numi</a>, <a href="https://soulver.app">Soulver</a>, <a target="_blank" href="https://trankynam.com/atext/">aText</a>, <a target="_blank" href="https://magnet.crowdcafe.com">Magnet</a>, <a target="_blank" href="https://maccy.app">Maccy</a>, <a target="_blank" href="https://nova.app">Nova</a>, <a target="_blank" href="https://duckduckgo.com/?q=camo+app&t=osx&ia=web">Camo</a>, <a target="_blank" href="https://colorslurp.com">ColorSlurp</a>, <a target="_blank" href="https://sipapp.io">Sip</a>, <a target="_blank" href="https://www.craft.do">Craft</a>, <a target="_blank" href="https://ulysses.app">Ulysses</a>, <a target="_blank" href="https://raindrop.io">Raindrop</a>, <a target="_blank" href="https://www.reederapp.com">Reeder</a>, <a target="_blank" href="https://tot.rocks">Tot</a>, <a target="_blank" href="https://tryalcove.com">Alcove</a>, <a target="_blank" href="https://rogueamoeba.com/soundsource/">SoundSource</a>.
         </section>
         <footer class="post__footer">
 
