--- a/work.html
+++ b/work.html
@@ -72,7 +72,7 @@
             <li class="work__item">
               <div class="work__period"><time>2011</time>–<time>2016</time></div>
               <h3 class="work__title">Designer <span class="muted">at</span> <a href="https://clicksign.com">Clicksign</a></h3>
-              <p class="work__description">The first e-signature service compliant with Brazilian and international laws. I contributed to design and front-end development from the company's inception.</p>
+              <p class="work__description">The first e-signature service compliant with Brazilian and international laws. I contributed with design and front-end development from the company's inception.</p>
             </li>
             <li class="work__item">
               <div class="work__period"><time>2010</time>–<time>2010</time></div>
@@ -122,7 +122,7 @@
             </li>
             <li class="work__item">
               <div class="work__period"><time>2010</time></div>
-              <h3 class="work__title"><a href="http://medliq.com.br">SMR MEDLiQ</a></h3>
+              <h3 class="work__title">SMR MEDLiQ</h3>
               <p class="work__description">This project consisted in developing both hardware and software for a breakthrough device that took fluid measurements in tanks. We built from the ground-up a 7" touch display running WebKit on a micro board connected directly to MEDLiQ’s sensors. It reported information on volume, supply and leakages.</p>
             </li>
           </ol>
