--- a/colophon.html
+++ b/colophon.html
@@ -33,7 +33,7 @@
           <h1 class="post__title">Colophon</h1>
         </header>
         <section class="post__body">
-          <p>This website is being built by hand on <a href="https://astronvim.com">AstroNvim</a> with good old <abbr title="HyperText Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr>. Not using generators, <abbr title="Content Management System">CMS</abbr>s and <abbr title="Software as a Service">SaaS</abbr> was a conscious decision inspired by <a href="https://lmnt.me/blog/make-a-damn-website.html">Louie Mantia</a>.</p>
+          <p>This website is being built by hand on a <a href="https://www.lazyvim.org/">LazyVim</a> powered <a href="https://neovim.io">Neovim</a> with good old <abbr title="HyperText Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr>. Not using generators, <abbr title="Content Management System">CMS</abbr>s and <abbr title="Software as a Service">SaaS</abbr> was a conscious decision inspired by <a href="https://lmnt.me/blog/make-a-damn-website.html">Louie Mantia</a>.</p>
           <p>Type is set in <a href="https://ia.net/topics/a-typographic-christmas">iA Writer Duo</a>.</p>
           <p>Two <a href="https://www.raycast.com">Raycast</a> extensions have been incredibly useful during development: <a href="https://www.raycast.com/jmaeso/uuid-generator">UUID Generator</a> to generate unique identifiers for the <abbr title="Really Simple Syndication">RSS</abbr> feed, and <a href="https://www.raycast.com/HelloImSteven/sips">Image Modification</a> to convert images. Other tools I used can be found <a href="stack.html">here</a>.</p>
           <p>Made on a MacBook Pro <span class="muted">(13-inch, M1, 2020)</span> connected to a Dell P2721Q <span class="muted">(27-inch, 4k)</span> display, while listening to <a href="https://www.youtube.com/watch?v=HMgG3KwkJnw">communist lectures</a> on Sony WH-1000XM5 noise-cancelling headphones.</p>
@@ -45,7 +45,7 @@
     </main>
 
     <footer class="site__footer">
-      <p>&copy; <time>2014</time>–<time>2025</time> Rafael Masoni</p>
+      <p>&copy; <time>2014</time>–<time>2026</time> Rafael Masoni</p>
       <nav class="site__footer-menu">
         <a class="site__footer-link" href="colophon.html">Colophon</a>
         <span aria-hidden="true">&middot;</span>
