--- a/stack.html
+++ b/stack.html
@@ -34,7 +34,7 @@
         </header>
         <section class="post__body">
           <p>I've been in the Apple ecosystem for almost 20 years, so my operating systems are macOS and iOS.</p>
-          <p>My main browser is <a target="_blank" href="https://www.apple.com/safari/">Safari</a>, and my code editor is <a target="_blank" href="https://neovim.io">Neovim</a> (augmented by <a target="_blank" href="https://lazyvim.org">LazyVim</a>).</p>
+          <p>My main browser is <a target="_blank" href="https://www.apple.com/safari/">Safari</a>, and my code editor is <a target="_blank" href="https://neovim.io">Neovim</a> (configured by <a target="_blank" href="https://lazyvim.org">LazyVim</a>).</p>
           <p>I use <a target="_blank" href="https://obsidian.md">Obsidian</a> as my <abbr title="Dungeons & Dragons">D&D</abbr> campaign manager and general notetaker, <a target="_blank" href="https://macromates.com">TextMate</a> as an excellent find & replace tool, <a href="https://eagle.cool">Eagle</a> for storing visual references, and <a target="_blank" href="https://brave.com">Brave</a> for Chromium-dependent stuff.</p>
           <p>I can't function without <a target="_blank" href="https://raycast.com">Raycast</a> and <a target="_blank" href="https://1password.com">1Password</a>.</p>
 
